--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,19 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./dist/index.ts",
-    "dev":"nodemon ./src/index.ts",
-    "build":"tsc -p ."
+    "dev": "nodemon ./src/index.ts",
+    "build": "tsc -p ."
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.31",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
